fix:removed overflow

--- a/src/Components/Styles/Chart.css
+++ b/src/Components/Styles/Chart.css
@@ -1,8 +1,3 @@
-body {
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
 .charts-container {
   margin-top: 30px;
 }
